--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	compile group: 'com.auth0', name: 'auth0-spring-security-api', version: '1.0.0-rc.3'
 	compile group: 'com.auth0', name: 'auth0', version: '1.3.0'
 	
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
